build/log/idf_py_stdout_output_21472
Command: ninja flash
[1/11] Performing build step for 'bootloader'
[1/1] C:\Windows\system32\cmd.exe /C "cd /D D:\esp\project\build\bootloader\esp-idf\esptool_py && D:\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe D:/esp/v5.5/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/esp/project/build/bootloader/bootloader.bin"
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/11] No install step for 'bootloader'
[3/11] Completed 'bootloader'
[4/11] Building C object esp-idf/ui/CMakeFiles/__idf_ui.dir/ui_events.c.obj
FAILED: esp-idf/ui/CMakeFiles/__idf_ui.dir/ui_events.c.obj 
ccache D:\.espressif\tools\xtensa-esp-elf\esp-14.2.0_20241119\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/esp/project/build/config -ID:/esp/project/components/ui -ID:/esp/project/include -ID:/esp/project/components/ui/screens -ID:/esp/project/managed_components/lvgl__lvgl -ID:/esp/v5.5/esp-idf/components/newlib/platform_include -ID:/esp/v5.5/esp-idf/components/freertos/config/include -ID:/esp/v5.5/esp-idf/components/freertos/config/include/freertos -ID:/esp/v5.5/esp-idf/components/freertos/config/xtensa/include -ID:/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/esp/v5.5/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/esp/v5.5/esp-idf/components/freertos/esp_additions/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/include/soc -ID:/esp/v5.5/esp-idf/components/esp_hw_support/include/soc/esp32s3 -ID:/esp/v5.5/esp-idf/components/esp_hw_support/dma/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/ldo/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/debug_probe/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/power_supply/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32s3/. -ID:/esp/v5.5/esp-idf/components/esp_hw_support/port/esp32s3/include -ID:/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -ID:/esp/v5.5/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -ID:/esp/v5.5/esp-idf/components/heap/include -ID:/esp/v5.5/esp-idf/components/heap/tlsf -ID:/esp/v5.5/esp-idf/components/log/include -ID:/esp/v5.5/esp-idf/components/soc/include -ID:/esp/v5.5/esp-idf/components/soc/esp32s3 -ID:/esp/v5.5/esp-idf/components/soc/esp32s3/include -ID:/esp/v5.5/esp-idf/components/soc/esp32s3/register -ID:/esp/v5.5/esp-idf/components/hal/platform_port/include -ID:/esp/v5.5/esp-idf/components/hal/esp32s3/include -ID:/esp/v5.5/esp-idf/components/hal/include -ID:/esp/v5.5/esp-idf/components/esp_rom/include -ID:/esp/v5.5/esp-idf/components/esp_rom/esp32s3/include -ID:/esp/v5.5/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -ID:/esp/v5.5/esp-idf/components/esp_rom/esp32s3 -ID:/esp/v5.5/esp-idf/components/esp_common/include -ID:/esp/v5.5/esp-idf/components/esp_system/include -ID:/esp/v5.5/esp-idf/components/esp_system/port/soc -ID:/esp/v5.5/esp-idf/components/esp_system/port/include/private -ID:/esp/v5.5/esp-idf/components/xtensa/esp32s3/include -ID:/esp/v5.5/esp-idf/components/xtensa/include -ID:/esp/v5.5/esp-idf/components/xtensa/deprecated_include -ID:/esp/v5.5/esp-idf/components/lwip/include -ID:/esp/v5.5/esp-idf/components/lwip/include/apps -ID:/esp/v5.5/esp-idf/components/lwip/include/apps/sntp -ID:/esp/v5.5/esp-idf/components/lwip/lwip/src/include -ID:/esp/v5.5/esp-idf/components/lwip/port/include -ID:/esp/v5.5/esp-idf/components/lwip/port/freertos/include -ID:/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include -ID:/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include/arch -ID:/esp/v5.5/esp-idf/components/lwip/port/esp32xx/include/sys -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/esp/project=. -fmacro-prefix-map=D:/esp/v5.5/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/ui/CMakeFiles/__idf_ui.dir/ui_events.c.obj -MF esp-idf\ui\CMakeFiles\__idf_ui.dir\ui_events.c.obj.d -o esp-idf/ui/CMakeFiles/__idf_ui.dir/ui_events.c.obj -c D:/esp/project/components/ui/ui_events.c
D:/esp/project/components/ui/ui_events.c: In function 'update_time_cb':
D:/esp/project/components/ui/ui_events.c:13:35: error: 'SNTP_SYNC_STATUS_DONE' undeclared (first use in this function); did you mean 'SNTP_SYNC_STATUS_RESET'?
   13 |     if (sntp_get_sync_status() == SNTP_SYNC_STATUS_DONE)
      |                                   ^~~~~~~~~~~~~~~~~~~~~
      |                                   SNTP_SYNC_STATUS_RESET
D:/esp/project/components/ui/ui_events.c:13:35: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
